[package]
name = "xdp-rs-ebpf"
version = "0.1.0"
edition = "2021"

[dependencies]
xdp-rs-common = { path = "../xdp-rs-common" }

aya-ebpf = { workspace = true }
aya-log-ebpf = { workspace = true }
network-types = "0.0.7"

[build-dependencies]
which = { workspace = true }

[[bin]]
name = "xdp-rs"
path = "src/main.rs"
